tests/neg/override-scala2-macro.check
-- [E164] Declaration Error: tests/neg/override-scala2-macro.scala:2:22 ------------------------------------------------
error overriding method f in class StringContext of type [A >: Any](args: Seq[A]): String;
  method f of type [A >: Any](args: Seq[A]): String cannot be used here - only Scala-2 macros can override Scala-2 macros
... library/src/scala/StringContext.scala
197 |  def f[A >: Any](args: A*): String = macro ??? // fasttracked to scala.tools.reflect.FormatInterpolator::interpolateF
    |      -
    |      the overridden method is here
... tests/neg/override-scala2-macro.scala
 2 |  override inline def f[A >: Any](args: A*): String = ??? // error
    |                      ^
    |                   the overriding method cannot be used here - only Scala-2 macros can override Scala-2 macros

